# claudsidian

./: CLAUDE.md  manifest.json  package.json  railway.toml  styles.css
.claude/: settings.json
.github/workflows/: release.yml
backend/: .env.example  Dockerfile  README.md  package-lock.json  package.json
backend-py/: .env.example  Dockerfile  pyproject.toml
backend-py/src/: conversation.py  log.py  main.py  mock_agent.py  protocol.py  server.py  session_store.py  vault_tools.py
backend-py/tests/: test_e2e.py
backend/src/: agent.ts  index.ts  mcp-client.ts  mcp-tools.ts  mock-agent.ts  protocol.ts  server.ts  session-store.ts  utils.ts  vault-tools.ts
backend/test/: automated-test.ts  test-client.ts
docs/: interruptions-plan.md  interspersed-layout-spec.md  open-source-release-plan.md
docs/specs/: 2026-04-05-session-persistence-design.md
docs/superpowers/plans/: 2026-04-09-python-backend-rewrite.md
src/: ChatView.tsx  constants.ts  main.ts
src/components/chat-view/: ActivityAccordion.tsx  ActivityItem.tsx  AssistantMessageReasoning.tsx  AssistantToolMessageGroupItem.tsx  Chat.tsx  EditDiffBlock.tsx  InterspersedContent.tsx  MarkdownCodeComponent.tsx  ToolMessage.tsx  UserMessageItem.tsx  useAutoScroll.ts  useChatStreamManager.ts
src/components/modals/: ErrorModal.tsx  InstallerUpdateRequiredModal.tsx
src/components/settings/: SettingsTabRoot.tsx
src/core/backend/: BackendProvider.ts  ConflictManager.ts  EditHistory.ts  VaultRpcHandler.ts  (+8 more)
src/hooks/: useChatHistory.ts  useSkills.ts
src/types/: chat-model.types.ts  chat.ts  provider.types.ts
(+17 files in other folders)
